# S-Lang

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pyproject.toml
examples/: bool_if_inline.slang  diffusion_anc0.slang  expect_demo.slang  fn_call_cx.slang  fn_prep.slang  grover_mark3.slang  grover_selfcheck.slang  loop_sugar.slang  mod_import_demo.slang  qft_roundtrip.slang  routed_line_cx.slang
slang/: __init__.py  cli.py  interpreter.py  ir.py  parser.py  passes.py  runtime.py  transpiler.py
tests/: test_features.py  test_lang_dqo.py  test_smoke.py
tools/: package_src.sh  qasm_to_qiskit_metrics.py  sanity.sh  self_check_grover.py
